crates/wdl-grammar/tests/parsing/unterminated-metadata-string/source.errors
error: an unterminated string was encountered
  ┌─ tests/parsing/unterminated-metadata-string/source.wdl:7:12
  │
7 │         a: 'unterminated
  │            ^ this quote is not matched

error: expected `}`, but found end of input
   ┌─ tests/parsing/unterminated-metadata-string/source.wdl:10:1
   │
 6 │     meta {
   │          - this `{` is not matched
   ·
10 │ 
   │ ^ unexpected end of input

error: expected `}`, but found end of input
   ┌─ tests/parsing/unterminated-metadata-string/source.wdl:10:1
   │
 5 │ task test {
   │           - this `{` is not matched
   ·
10 │ 
   │ ^ unexpected end of input

