crates/wdl-grammar/tests/parsing/unterminated-metadata-string/source.wdl
# This is a test of an unterminated metadata string.

version 1.1

task test {
    meta {
        a: 'unterminated
    }
}
